--- a/smali/build.gradle
+++ b/smali/build.gradle
@@ -121,13 +121,13 @@ jflex {
 
 publish {
     publishing {
-        publications {
-            mavenJava(MavenPublication) {
-                pom {
-                    description = 'smali is an assembler for dalvik bytecode'
-                    scm {
-                        url = 'https://github.com/JesusFreke/smali/tree/master/smali'
-                    }
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/revanced/smali")
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                    password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
                 }
             }
         }
